--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="mainContainer container-sm text-center mt-5">
             <div class="response-container"></div>
             <div class="wait hide">Waiting response....</div>
-            <input type="text" class="input-text form-control position-absolute bottom-0 start-50 translate-middle-x">
+            <input type="text" class="input-text form-control position-absolute bottom-0 start-50 translate-middle-x" placeholder="Ask something here....">
         </div>
     </div>
     
