refactor for peformance+  modif on encryption side

--- a/RSAEncryption/RSAEncryption.html
+++ b/RSAEncryption/RSAEncryption.html
@@ -14,6 +14,10 @@
             <div class="input-to-encrypt">
                 <h5>Encrypt Message</h5>
                 <textarea name="text-to-encrypt" id="text-to-encrypt" cols="90" rows="10"></textarea>
+                <div class="public-info-input">
+                    <input type="text" class="form-control" id="public-key-input" placeholder="Insert Public Key" style="margin-bottom: 5px;">
+                    <input type="text" class="form-control" id="n-value-input" placeholder="Insert N value">
+                </div>
                 <button class="btn btn-outline-light" id="encrypt-btn">Encrypt</button>
             </div>
             
