adding simple instagram downloader feature

--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/style.css">
-    <title>Try Chat GPT API</title>
+    <title>Fredo Tools</title>
 </head>
 <body>
-    <div class="container-parent p-2">
-        <h1>Chat GPT API</h1>
-        <div class="mainContainer container-sm text-center mt-5">
-            <div class="response-container"></div>
-            <div class="wait hide">Waiting response....</div>
-            <input type="text" class="input-text form-control position-absolute bottom-0 start-50 translate-middle-x" placeholder="Ask something here....">
+
+    <div class="main-container">
+        <!-- <div class="header">
+            <h2 class="fs-1">Fredo's Tools</h2>
+        </div> -->
+
+        <div class="services">
+            <h2 class="fs-1" id="header">Fredo's Tools</h2>
+            <p class="fs-4" style="margin-bottom: 5rem;">Choose services below</p>
+            <div class="services-container">
+                <a href="/ChatGPT_API/chatgpt.html"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
+                <a href="/RSAEncryption/RSAEncryption.html"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
+                <a href="/InstagramDownloader/instagram_downloader.html"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
+            </div>
         </div>
     </div>
-    
-
-    <script src="/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
