fix first bugs on instagram downloader feature

--- a/InstagramDownloader/instagram_downloader.html
+++ b/InstagramDownloader/instagram_downloader.html
@@ -11,11 +11,15 @@
     <div class="main-container">
         <div class="header">
             <h2 class="fs-2">Instagram Downloader</h2>
-            <p class="fs-5" style="text-align: center;">Paste link instagram dan photo/video akan langsung terdownload👍</p>
+            <p class="fs-5" style="text-align: center;">Paste link instagram dan click download👍</p>
         </div>
 
         <div class="form-container">
             <input type="text" class="form-control" id="input-link" placeholder="Paste link disini...">
+            <p class="fs-5 fst-italic hide" id="notif-mengambil" style="padding-top: 2rem;">Mengambil data....Mohon tunggu..</p>
+            <a href="" download="" id="download-btn">
+                <button class="btn btn-secondary disabled" style="margin-top: 2rem;" id="download">Download</button>
+            </a>
         </div>
 
         <div class="footer">
