--- a/InstagramDownloader/instagram_downloader.html
+++ b/InstagramDownloader/instagram_downloader.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/InstagramDownloader/ig-downloader-style.css">
+    <link rel="icon" type="image/x-icon" href="/InstagramDownloader/assets/icon_ig.ico">
     <title>Instagram Downloader</title>
 </head>
 <body>
