--- a/RSAEncryption/RSAEncryption.html
+++ b/RSAEncryption/RSAEncryption.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/RSAEncryption/assets/RSA_Security_logo2.svg.ico">
     <link rel="stylesheet" href="/RSAEncryption/style-RSA.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <title>RSA Encryption Demo</title>
