--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/fr-icon.ico">
     <title>Fredo Tools</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
         </div> -->
 
         <div class="services">
-            <h2 class="fs-1" id="header">Fredo's Tools</h2>
+            <h2 class="fs-1" id="header">Fredo Tools</h2>
             <p class="fs-4" style="margin-bottom: 5rem;">Choose services below</p>
             <div class="services-container">
                 <a href="/ChatGPT_API/chatgpt.html"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
