--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <a href="/ChatGPT_API/chatgpt.html"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
                 <a href="/RSAEncryption/RSAEncryption.html"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
                 <a href="/InstagramDownloader/instagram_downloader.html"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
+                <a href="/Live_Chat_Mock/authenticate_API.html"><button class="btn btn-primary fs-5">Live Chat Mock</button></a>
             </div>
         </div>
     </div>
