modification not perject yet (lot of bugs)

--- a/Live_Chat_Mock/chat.html
+++ b/Live_Chat_Mock/chat.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/chat-style.css">
+    <link rel="stylesheet" href="/Live_Chat_Mock/css/chat-style.css">
     <title>Chat</title>
 </head>
 <body>
     <div class="container">
         <h2 class="welcome-title" id="welcome-title"></h2>
+        <button class="btn btn-danger" style="margin-bottom: 1rem;">Logout</button>
 
         <div class="chats-container"></div>
 
@@ -23,6 +24,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/chat.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+    <script src="/Live_Chat_Mock/js/chat.js"></script>
 </body>
 </html>
