--- a/Live_Chat_Mock/login.html
+++ b/Live_Chat_Mock/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Live_Chat_Mock/css/style.css">
     <title>Login</title>
 </head>
 <body>
@@ -18,12 +18,12 @@
                 <input type="password" id="password" class="form-control mb-2" placeholder="input your password..." size="30">
             </form>
             <button class="btn btn-primary" id="login-btn">Login</button>
-            <h5>Don't have account? <a href="/register.html">register here</a></h5>
+            <h5>Don't have account? <a href="/Live_Chat_Mock/register.html">register here</a></h5>
             <h5 class="text-bg-danger hide" id="error_handling"></h5>
         </div>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/login.js"></script>
+    <script src="/Live_Chat_Mock/js/login.js"></script>
 </body>
 </html>
