--- a/Live_Chat_Mock/authenticate_API.html
+++ b/Live_Chat_Mock/authenticate_API.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/auth-style.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Live_Chat_Mock/css/auth-style.css">
+    <link rel="stylesheet" href="/Live_Chat_Mock/css/style.css">
     <title>Auth Page</title>
 </head>
 <body>
@@ -40,6 +40,6 @@
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/auth-page-script.js"></script>
+    <script src="/Live_Chat_Mock/js/auth-page-script.js"></script>
 </body>
 </html>
