--- a/Live_Chat_Mock/register.html
+++ b/Live_Chat_Mock/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Live_Chat_Mock/css/style.css">
     <title>Register</title>
 </head>
 <body>
@@ -24,6 +24,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/register.js"></script>
+    <script src="/Live_Chat_Mock/js/register.js"></script>
 </body>
 </html>
