--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- <div class="header">
             <h2 class="fs-1">Fredo's Tools</h2>
         </div> -->
-        
+
 
         <div class="services">
             <h2 class="fs-1" id="header">Fredo Tools</h2>
@@ -23,7 +23,9 @@
                 <a href="/ChatGPT_API/chatgpt.html"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
                 <a href="/RSAEncryption/RSAEncryption.html"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
                 <a href="/InstagramDownloader/instagram_downloader.html"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
-                <a href="/Live_Chat_Mock/authenticate_API.html"><button class="btn btn-primary fs-5">Live Chat Mock</button></a>
+                <!-- <a href="/Live_Chat_Mock/authenticate_API.html" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a> -->
+                <a href="" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
+                <a href=""></a>
             </div>
         </div>
     </div>
