add small changes to the main page UI button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="/InstagramDownloader/instagram_downloader.html"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
                 <!-- <a href="/Live_Chat_Mock/authenticate_API.html" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a> -->
                 <a href="" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
-                <a href=""></a>
+                <a href="/KalkulatorSuara/VoiceCalculator.html"><button class="btn btn-primary fs-5">Voice Calculator</button></a>
             </div>
         </div>
     </div>
