add identity credit UI footer on calculator page

--- a/KalkulatorSuara/VoiceCalculator.html
+++ b/KalkulatorSuara/VoiceCalculator.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/KalkulatorSuara/voiceCalculatorStyle.css">
-    <title>Kalkulator Suara</title>
+    <title>Kalkulator Suara | BETA</title>
 </head>
 <body>
     <header>
         <div class="head">
-            <h3>Kalkulator Suara</h3>
+            <h3>Kalkulator Suara (BETA)</h3>
         </div>
     </header>
 
@@ -27,6 +27,10 @@
 
         <div class="respon">
             <textarea name="" id="respon-textarea" cols="140" rows="10" placeholder="respon hasilnya akan tertampil disini..." readonly></textarea>
+        </div>
+
+        <div class="footer">
+            <p class="fs-6 opacity-75">Made by Fredo Ronan 🙌</p>
         </div>
     </div>
 
