--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
 <body>
 
     <div class="main-container">
-        <!-- <div class="header">
-            <h2 class="fs-1">Fredo's Tools</h2>
-        </div> -->
-
 
         <div class="services">
             <h2 class="fs-1" id="header">Fredo Tools</h2>
             <p class="fs-4" style="margin-bottom: 5rem;">Choose services below</p>
             <div class="services-container">
-                <a href="/ChatGPT_API/chatgpt.html"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
-                <a href="/RSAEncryption/RSAEncryption.html"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
-                <a href="/InstagramDownloader/instagram_downloader.html"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
+                <a href="/ChatGPT_API/chatgpt.html" target="_blank"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
+                <a href="/RSAEncryption/RSAEncryption.html" target="_blank"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
+                <a href="/InstagramDownloader/instagram_downloader.html" target="_blank"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
                 <!-- <a href="/Live_Chat_Mock/authenticate_API.html" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a> -->
-                <a href="" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
-                <a href="/KalkulatorSuara/VoiceCalculator.html"><button class="btn btn-primary fs-5">Voice Calculator</button></a>
+                <a href="" style="cursor: default;" target="_blank"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
+                <a href="/KalkulatorSuara/VoiceCalculator.html" target="_blank"><button class="btn btn-primary fs-5">Voice Calculator</button></a>
+                <a href="/API/api_services.html" target="_blank"><button class="btn btn-primary fs-5">API Services</button></a>
             </div>
         </div>
     </div>
