add live cctv service

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <a href="/RSAEncryption/RSAEncryption.html" target="_blank"><button class="btn btn-primary fs-5">RSA Encryption Demo</button></a>
                 <a href="/InstagramDownloader/instagram_downloader.html" target="_blank"><button class="btn btn-primary fs-5">Instagram Downloader</button></a>
                 <!-- <a href="/Live_Chat_Mock/authenticate_API.html" style="cursor: default;"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a> -->
-                <a href="" style="cursor: default;" target="_blank"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
+                <a href="" style="cursor: default;" aria-disabled="true"><button class="btn btn-secondary fs-5 disabled">Live Chat Mock <p class="fs-6 fst-italic">(under development)</p></button></a>
                 <a href="/KalkulatorSuara/VoiceCalculator.html" target="_blank"><button class="btn btn-primary fs-5">Voice Calculator</button></a>
                 <a href="/API/api_services.html" target="_blank"><button class="btn btn-primary fs-5">API Services</button></a>
+                <a href="/CCTV_Service/cctv_services.html" target="_blank"><button class="btn btn-primary fs-5">Live CCTV</button></a>
             </div>
         </div>
     </div>
