--- a/CCTV_Service/Sleman/cctv_sleman.html
+++ b/CCTV_Service/Sleman/cctv_sleman.html
@@ -19,7 +19,8 @@
         </div>
 
         <div class="video-box">
-            <iframe src="http://103.71.191.168/8881/player.html"></iframe><br>
+<!--             <iframe src="http://103.71.191.168/8881/player.html"></iframe><br> -->
+            <iframe src="https://proxy-http-server.vercel.app/denggung_utara"></iframe><br>
             <strong>Denggung 2</strong>
         </div>
 
