add live cctv for kota yogyakarta

--- a/CCTV_Service/Sleman/cctv_sleman.html
+++ b/CCTV_Service/Sleman/cctv_sleman.html
@@ -13,15 +13,15 @@
     </div>
 
     <div class="video-container">
-        <div class="video-box">
+        <!-- <div class="video-box">
             <iframe src="http://103.71.191.168/8880/player.html"></iframe><br>
             <strong>Denggung 1</strong>
-        </div>
+        </div> -->
 
         <div class="video-box">
-<!--             <iframe src="http://103.71.191.168/8881/player.html"></iframe><br> -->
-            <iframe src="https://proxy-http-server.vercel.app/denggung_utara"></iframe><br>
-            <strong>Denggung 2</strong>
+            <iframe src="http://103.71.191.168/8881/player.html"></iframe><br>
+            <!-- <iframe src="https://proxy-http-server.vercel.app/denggung_utara"></iframe><br> -->
+            <strong>Denggung Hadap Utara</strong>
         </div>
 
         <!--<div class="video-box">
@@ -29,10 +29,10 @@
             <strong>Denggung 3</strong>
         </div> -->
         
-        <div class="video-box">
+        <!-- <div class="video-box">
             <iframe src="http://103.71.191.168/8914/player.html"></iframe><br>
             <strong>Tugu Urang (Kaliurang)</strong>
-        </div>
+        </div> -->
 
         <!-- <div class="video-box">
             <iframe src="http://103.71.191.168/8884/player.html"></iframe><br>
