--- a/CCTV_Service/cctv_services.html
+++ b/CCTV_Service/cctv_services.html
@@ -15,6 +15,7 @@
             <p class="fs-4" style="margin-bottom: 5rem;">Choose City</p>
             <div class="services-container">
                 <a href="/CCTV_Service/Sleman/cctv_sleman.html" target="_blank"><button class="btn btn-primary fs-5">Sleman</button></a>
+                <a href="/CCTV_Service/Yogyakarta/cctv_kota_jogja.html" target="_blank"><button class="btn btn-primary fs-5">Kota Yogyakarta</button></a>
             </div>
         </div>
     </div>
