--- a/CCTV_Service/Yogyakarta/cctv_kota_jogja.html
+++ b/CCTV_Service/Yogyakarta/cctv_kota_jogja.html
@@ -54,6 +54,13 @@
             </video>
             <h2>Simpang Demangan Hadap Timur</h2>
         </div>
+
+        <div class="cctv-video-container">
+            <video id="simpang_jokteng" class="video-js vjs-default-skin" controls width="640" height="360">
+                <source src="https://cctvjss.jogjakota.go.id/atcs/ATCS_joktengwetan.stream/playlist.m3u8" type="application/x-mpegURL">
+            </video>
+            <h2>Simpang Jokteng (Arah Jogja Tronik) hadap timur</h2>
+        </div>
     </div>
     <div class="footer">
         <p class="footer-text">Layout by <a href="https://fredo-ronan.github.io/">Fredo Ronan</a></p>
