add google tag manager

--- a/RSAEncryption/RSAEncryption.html
+++ b/RSAEncryption/RSAEncryption.html
@@ -6,6 +6,13 @@
     <link rel="icon" type="image/x-icon" href="/RSAEncryption/assets/RSA_Security_logo2.svg.ico">
     <link rel="stylesheet" href="/RSAEncryption/style-RSA.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PX4JHHJ5');</script>
+    <!-- End Google Tag Manager -->
     <title>RSA Encryption Demo</title>
 </head>
 <body>
@@ -46,6 +53,12 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+            Created by <a href="https://fredo-code.vercel.app" target="_blank">Fredo Ronan</a>
+        </div>
+    </footer>
 
     <!-- Pop Up -->
     <div class="modal fade show" id="modal-wrapper">
@@ -118,4 +131,8 @@
     <script src="/RSAEncryption/encrypt-decrypt.js"></script>
     <script src="/RSAEncryption/main-script.js"></script>
 </body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PX4JHHJ5"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </html>
