--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
         <div class="services">
             <h2 class="fs-1" id="header">Fredo Tools</h2>
+            <div style="display: flex; gap: 5px;">
+                <p>These tools are just for fun. Person behind all of this is </p>
+                <a href="https://fredo-code.vercel.app">Fredo Ronan</a>
+            </div>
             <p class="fs-4" style="margin-bottom: 5rem;">Choose services below</p>
             <div class="services-container">
                 <a href="/ChatGPT_API/chatgpt.html" target="_blank"><button class="btn btn-primary fs-5">Chat GPT API</button></a>
