--- a/RSAEncryption/RSAEncryption.html
+++ b/RSAEncryption/RSAEncryption.html
@@ -15,6 +15,15 @@
     <!-- End Google Tag Manager -->
     <title>RSA Encryption Demo</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZCQYJ1JVP9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZCQYJ1JVP9');
+</script>
 <body>
     <div class="main-container">
         <h4>RSA Message Encryption</h4>
